--- a/index.html
+++ b/index.html
@@ -1,64 +1,159 @@
-<!DOCTYPE html SYSTEM "about:legacy-compat"> 
-<html dir="ltr" lang="nl-be" class="no-js" prefix="og: http://ogp.me/ns#">
-  <head>
-    <!-- Character encoding -->
-	  <meta charset="UTF-8"> 
-	  <!-- Latest version of rendering engine -->
-	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <!-- Mobile Viewport -->
-	  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <!-- Most important SEO tag -->
-    <title>HTML5 | Webdesign II | GDM</title>
-    <!-- Other SEO friendly tags -->	
-    <meta name="description" content="Lees hier alles over nieuwe media, html5 en andere ontwikkelingen in webdevelopment en mobile development. De docenten NMD willen graag hun kennis delen met jou!">
-    <meta name="keywords" content="HTML5, JavaScript, jQuery, CSS3">
-    <meta name="author" content="Arteveldehogeschool - Bachelor in de grafische en digitale media | MMP">
-    <meta name="copyright" content="Copyright 2010-17 Arteveldehogeschool. All Rights Reserved.">
-    <!-- OpenGraph -->
-    <meta property="og:type" content="website">
-    <meta property="og:title" content=">HTML5 | Webdesign II | GDM">
-    <meta property="og:description" content="Lees hier alles over nieuwe media, html5 en andere ontwikkelingen in webdevelopment en mobile development. De docenten NMD willen graag hun kennis delen met jou!">
-    <meta property="og:url" content="http://www.gdm.gent/">
-    <meta property="og:site_name" content="GDM.GENT">
-    <meta property="og:image" content="assets/images/ahs.png">
-    <meta property="og:image:width" content="129">
-    <meta property="og:image:height" content="129">
-    <!-- humans.txt -->
-    <link rel="author" type="text/plain" href="/humans.txt">
-     <!-- DNS prefech for CDN -->
-    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
-    <link rel="dns-prefetch" href="//code.jquery.com">
-    <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
-    <!-- Icons -->
-    <!-- http://realfavicongenerator.net/ -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="assets/icons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="assets/icons/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="assets/icons/manifest.json">
-    <link rel="mask-icon" href="assets/icons/safari-pinned-tab.svg" color="#ee9900">
-    <link rel="shortcut icon" href="assets/icons/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="GDM">
-    <meta name="application-name" content="GDM">
-    <meta name="msapplication-config" content="assets/icons/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-    <!-- Stylesheets: Vendors -->
-    <link rel="stylesheet" media="all" href="vendor/normalize/normalize.css">
-    <!-- Stylesheets: App -->
-    <link rel="stylesheet" media="all" href="css/fonts.css">
-    <link rel="stylesheet" media="all" href="css/typography.css">
-    <link rel="stylesheet" media="all" href="css/main.css">
-    <!-- Modernizr: feature detection -->
-    <script src="vendor/modernizr/modernizr.min.js"></script>
-  </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Het blauwe wiel</title>
+    <link rel="stylesheet" href="website.css">
+</head>
+<body>
+    <div class="container">
+    <div class="headercontainer">
+        <div class="logo">
+            <img src="17572050_1287931144575739_1601424580_o.jpg" alt="Logo" height="100" width="100">
+        </div>
+        <div class="menu">
+            <ul>
+                <li><a href="#overons">Over ons</a></li>  <!---->
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </div> 
+    
 
-  <body>
-    <div class="intro">
-      <h1>GDM - HTML5 Template</h1>
-      <p>We educate future talents in Design for Print and Non-Print, Web- and App Development, Audio and Video Production, 2D- and 3D Animations, Printing and Packaging and the whole Management of those workflows!</p>
+    <div id="main">
+   <h1 id="overons">Over ons</h1>
+   <h2>Het Blauwe Wiel</h2>
+   <div class="fotos">
+  <a href="#justine"><img src="justine.jpg" alt="Justine" height="200" width="200"></a>
+  <a href="#helena"><img src="helena.jpg" alt="Henlena" height="200" width="200"></a>
+  <a href="#henri"><img src="henri.jpg" alt="Henri" height="200" width="200"></a>
+  </div>
+  <div class="tekst1"><p>Justine Verlodt</p></div>
+  <div class="tekst2"><p>Helena Verlodt</p></div>
+  <div class="tekst3"><p>Henri Verlodt</p></div>
+  <br>
+  <br>
+  <br>
+  
+  <h3 id="justine">Justine Verlodt</h3>
+  <p>Hallo, ik ben Justine. blablalbaaleijfqmiejqfjsdmifjef<br>
+      qiejfqmijsefimqksejkfqsefijqesmfiljdmkjemijfqmlkjeiqksmdjfiejmq<br>
+      djfiejmqkfjeiqjmklej jfiqjsmdkfjie jiesfmiesj jiejmrriqjfmiej jfeifmqkfe j
+  </p> 
+  
+  <h3 id="helena">Helena Verlodt</h3>
+  <p>Hallo, ik ben Helena. Ik ben Justine haar zus. blablalbaaleijfqmiejqfjsdmifjef<br>
+      qiejfqmijsefimqksejkfqsefijqesmfiljdmkjemijfqmlkjeiqksmdjfiejmq<br>
+      djfiejmqkfjeiqjmklej jfiqjsmdkfjie jiesfmiesj jiejmrriqjfmiej jfeifmqkfe j
+  </p>
+  <h3 id="henri">Henri Verlodt</h3>
+  <p>Hallo, ik ben Henri. Ik ben de broer van Justine en Helena, ik doe de klusjes op het bedrijf.<br>
+      blablalbaaleijfqmiejqfjsdmifjef<br>
+      qiejfqmijsefimqksejkfqsefijqesmfiljdmkjemijfqmlkjeiqksmdjfiejmq<br>
+      djfiejmqkfjeiqjmklej jfiqjsmdkfjie jiesfmiesj jiejmrriqjfmiej jfeifmqkfe j
+  </p>
+  <h1 id="portfolio">Portfolio</h1>
+  <div id="tijger">
+      <a href="#tijger2"><img src="Afbeeldingen/tijger.jpg" alt="Tijger" height="300px" width="200px"></a>
+</div>
+<div id="giraf">
+      <a href="#giraf2"><img src="Afbeeldingen/giraf.jpg" alt="Tijger" height="300px" width="300px"></a>
+</div>
+<div id="beren">
+      <a href="#beren2"><img src="Afbeeldingen/beren.jpg" alt="Tijger" height="300px" width="400px"></a>
+</div>
+<div id="wittetijger">
+      <a href="#wittetijger2"><img src="Afbeeldingen/wittetijger.jpg" alt="Tijger" height="300px" width="400px"></a>
+</div>
+<div id="kat">
+      <a href="#"><img src="Afbeeldingen/kat.jpg" alt="Tijger" height="300px" width="200px"></a>
+</div>
+<div id="hond">
+      <a href="#"><img src="Afbeeldingen/hond.jpg" alt="Tijger" height="300px" width="300px"></a>
+</div>
+</div>
+<h1 id="tijger2">Tijger</h1>
+<h2>Vormgeving</h2>
+    <div class=tijger>
+        <img src="Afbeeldingen/tijger.jpg" alt="Tijger" height="300px" width="200px">
     </div>
-    <!-- Scripts: Vendors -->
-      <!-- For example: jQuery, lodash, handlebars, ... -->
-    <!-- Scripts: App -->
-    <script src="js/main.js"></script>
-  </body>
+    <p class=beschrijving>Neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur,<br>
+    adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore <br>
+    magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum<br> exercitationem 
+    ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi<br> 
+    </p>
+ <h1 id="giraf2">Giraf</h1>
+<h2>Vormgeving</h2>
+    <div class=giraf>
+        <img src="Afbeeldingen/giraf.jpg" alt="Tijger" height="300px" width="300px">
+    </div>
+    <p class=beschrijving>Neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur,<br>
+    adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore <br>
+    magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum<br> exercitationem 
+    ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi<br> 
+    </p>
+    <h1 id="beren2">Beren</h1>
+<h2>Vormgeving</h2>
+    <div class=beren>
+        <img src="Afbeeldingen/beren.jpg" alt="Tijger" height="300px" width="400px">
+    </div>
+    <p class=beschrijving>Neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur,<br>
+    adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore <br>
+    magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum<br> exercitationem 
+    ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi<br> 
+    </p>
+     <h1 id="wittetijger2">Witte Tijger</h1>
+<h2>Vormgeving</h2>
+    <div class=wittetijger>
+        <img src="Afbeeldingen/wittetijger.jpg" alt="Tijger" height="300px" width="400px">
+    </div>
+    <p class=beschrijving>Neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur,<br>
+    adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore <br>
+    magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum<br> exercitationem 
+    ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi<br> 
+    </p>
+     <h1 id="kat2">Kat</h1>
+<h2>Vormgeving</h2>
+    <div class=kat>
+        <img src="Afbeeldingen/kat.jpg" alt="Tijger" height="300px" width="200px">
+    </div>
+    <p class=beschrijving>Neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur,<br>
+    adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore <br>
+    magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum<br> exercitationem 
+    ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi<br> 
+    </p>
+     <h1 id="hond2">Hond</h1>
+<h2>Vormgeving</h2>
+    <div class=hond>
+        <img src="Afbeeldingen/hond.jpg" alt="Tijger" height="300px" width="300px">
+    </div>
+    <p class=beschrijving>Neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur,<br>
+    adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore <br>
+    magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum<br> exercitationem 
+    ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi<br> 
+    </p>
+   
+
+
+<h1 id="contact">Contact</h1>
+<form action="mailto:justverl1@student.arteveldehs.be" method="post" enctype="text/plain">
+			
+				<input type="text" id="input-name" placeholder="Naam " required>
+                <input type="text" id="input-name" placeholder="Voornaam" required>
+				<input type="email" id="input-email" placeholder="E-mailadres" required>
+				<input type="text" id="input-subject" placeholder="Onderwerp" required>
+			
+				<textarea name="message" type="text" id="input-message" placeholder="Bericht" required></textarea> 
+			
+			
+			<button type="submit" value="submit">Verzenden</button>
+		</form>
+<footer>
+    <h4>Het blauwe wiel - Raapstraat 2, 9031 Drongen - 0498 65 52 46 <h4><br>
+        <i class="fa fa-facebook-official" aria-hidden="true"></i>
+        <i class="fa fa-twitter-square" aria-hidden="true"></i>
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+</footer>
+</body>
 </html>
