--- a/index.html
+++ b/index.html
@@ -3,31 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Het blauwe wiel</title>
-    <link rel="stylesheet" href="website.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+
 <body>
     <div class="container">
     <div class="headercontainer">
         <div class="logo">
-            <img src="17572050_1287931144575739_1601424580_o.jpg" alt="Logo" height="100" width="100">
+            <img src="assets/blauwewiel.jpg" alt="Logo">
         </div>
         <div class="menu">
             <ul>
-                <li><a href="#overons">Over ons</a></li>  <!---->
+                <li><a href="#overons">Over ons</a></li>  
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </div> 
-    
-
+   
     <div id="main">
    <h1 id="overons">Over ons</h1>
    <h2>Het Blauwe Wiel</h2>
    <div class="fotos">
-  <a href="#justine"><img src="justine.jpg" alt="Justine" height="200" width="200"></a>
-  <a href="#helena"><img src="helena.jpg" alt="Henlena" height="200" width="200"></a>
-  <a href="#henri"><img src="henri.jpg" alt="Henri" height="200" width="200"></a>
+  <a href="#justine"><img src="assets/justine.jpg" alt="Justine" height="200" width="200"></a>
+  <a href="#helena"><img src="assets/helena.jpg" alt="Helena" height="200" width="200"></a>
+  <a href="#henri"><img src="assets/henri.jpg" alt="Henri" height="200" width="200"></a>
   </div>
   <div class="tekst1"><p>Justine Verlodt</p></div>
   <div class="tekst2"><p>Helena Verlodt</p></div>
@@ -37,101 +38,94 @@
   <br>
   
   <h3 id="justine">Justine Verlodt</h3>
-  <p>Hallo, ik ben Justine. blablalbaaleijfqmiejqfjsdmifjef<br>
-      qiejfqmijsefimqksejkfqsefijqesmfiljdmkjemijfqmlkjeiqksmdjfiejmq<br>
-      djfiejmqkfjeiqjmklej jfiqjsmdkfjie jiesfmiesj jiejmrriqjfmiej jfeifmqkfe j
+  <p>Hallo, ik ben Justine. Ik ben de bedrijfsleider. <br>
+      Samen met mijn broer en zus vormen wij "Het Blauwe Wiel",<br>
+      een graphic agency dat alles voor jou ontwerpt.
   </p> 
   
   <h3 id="helena">Helena Verlodt</h3>
-  <p>Hallo, ik ben Helena. Ik ben Justine haar zus. blablalbaaleijfqmiejqfjsdmifjef<br>
-      qiejfqmijsefimqksejkfqsefijqesmfiljdmkjemijfqmlkjeiqksmdjfiejmq<br>
-      djfiejmqkfjeiqjmklej jfiqjsmdkfjie jiesfmiesj jiejmrriqjfmiej jfeifmqkfe j
+  <p>Hallo, ik ben Helena. Ik ben Justine haar zus.<br>
+  Ik ontwerp samen met Justine al jouw logo's en huisstijlen.
+   <br>
+      
   </p>
   <h3 id="henri">Henri Verlodt</h3>
-  <p>Hallo, ik ben Henri. Ik ben de broer van Justine en Helena, ik doe de klusjes op het bedrijf.<br>
-      blablalbaaleijfqmiejqfjsdmifjef<br>
-      qiejfqmijsefimqksejkfqsefijqesmfiljdmkjemijfqmlkjeiqksmdjfiejmq<br>
-      djfiejmqkfjeiqjmklej jfiqjsmdkfjie jiesfmiesj jiejmrriqjfmiej jfeifmqkfe j
+  <p>Hallo, ik ben Henri. Ik ben de broer van Justine.<br>
+       Als je mailt of belt, ben ik degene die antwoord op al jouw vragen.<br>
   </p>
   <h1 id="portfolio">Portfolio</h1>
   <div id="tijger">
-      <a href="#tijger2"><img src="Afbeeldingen/tijger.jpg" alt="Tijger" height="300px" width="200px"></a>
+      <a href="#tijger2"><img src="assets/Poster1.jpg" alt="Poster" height="300px" width="200px"></a>
 </div>
 <div id="giraf">
-      <a href="#giraf2"><img src="Afbeeldingen/giraf.jpg" alt="Tijger" height="300px" width="300px"></a>
+      <a href="#giraf2"><img src="assets/koelogo.jpg" alt="Logo" height="300px" width="300px"></a>
 </div>
 <div id="beren">
-      <a href="#beren2"><img src="Afbeeldingen/beren.jpg" alt="Tijger" height="300px" width="400px"></a>
+      <a href="#beren2"><img src="assets/logovarken.jpg" alt="Logo" height="300px" width="400px"></a>
 </div>
 <div id="wittetijger">
-      <a href="#wittetijger2"><img src="Afbeeldingen/wittetijger.jpg" alt="Tijger" height="300px" width="400px"></a>
+      <a href="#wittetijger2"><img src="assets/logokip.jpg" alt="Logo" height="300px" width="400px"></a>
 </div>
 <div id="kat">
-      <a href="#"><img src="Afbeeldingen/kat.jpg" alt="Tijger" height="300px" width="200px"></a>
+      <a href="#kat2"><img src="assets/verslag.jpg" alt="Voorblad" height="300px" width="200px"></a>
 </div>
 <div id="hond">
-      <a href="#"><img src="Afbeeldingen/hond.jpg" alt="Tijger" height="300px" width="300px"></a>
+      <a href="#hond2"><img src="assets/memo.jpg" alt="Memo" height="300px" width="300px"></a>
 </div>
 </div>
-<h1 id="tijger2">Tijger</h1>
-<h2>Vormgeving</h2>
+<h1 id="tijger2">Poster</h1>
+<h2>Grafische Vormgeving</h2>
     <div class=tijger>
-        <img src="Afbeeldingen/tijger.jpg" alt="Tijger" height="300px" width="200px">
+        <img src="assets/Poster1.jpg" alt="Tijger" height="300px" width="200px">
     </div>
-    <p class=beschrijving>Neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur,<br>
-    adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore <br>
-    magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum<br> exercitationem 
-    ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi<br> 
+    <p class=beschrijving>Deze poster was een examenopdracht voor grafische vormgeving. De opdracht<br>
+    luidde als volgt: kies een thema, maak een logo en illustratie die bij dat thema passen en maak<br>
+    daarmee een poster. Ik koos voor het thema 'Sport-zwembad'.
+
     </p>
- <h1 id="giraf2">Giraf</h1>
-<h2>Vormgeving</h2>
+ <h1 id="giraf2">Ighemkouter</h1>
+<h2>Grafische Vormgeving</h2>
     <div class=giraf>
-        <img src="Afbeeldingen/giraf.jpg" alt="Tijger" height="300px" width="300px">
+        <img src="assets/koelogo.jpg" alt="Tijger" height="300px" width="300px">
     </div>
-    <p class=beschrijving>Neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur,<br>
-    adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore <br>
-    magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum<br> exercitationem 
-    ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi<br> 
+    <p class=beschrijving>We maakten in de les een viertal pictogrammen. het was de bedoeling<br>
+    om die pictogrammen te verwerken in een logo. Ik koos voor Den Ighemkouter, <br>een bed en breakfast
+    op het platte land.
     </p>
-    <h1 id="beren2">Beren</h1>
-<h2>Vormgeving</h2>
+    <h1 id="beren2">Logo Varken</h1>
+<h2>Grafische Vormgeving</h2>
     <div class=beren>
-        <img src="Afbeeldingen/beren.jpg" alt="Tijger" height="300px" width="400px">
+        <img src="assets/logovarken.jpg" alt="Tijger" height="300px" width="400px">
     </div>
-    <p class=beschrijving>Neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur,<br>
-    adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore <br>
-    magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum<br> exercitationem 
-    ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi<br> 
+    <p class=beschrijving>We maakten in de les een viertal pictogrammen. het was de bedoeling<br>
+    om die pictogrammen te verwerken in een logo. Met een tweede pictogram <br>ontworp ik een ander logo.
     </p>
-     <h1 id="wittetijger2">Witte Tijger</h1>
-<h2>Vormgeving</h2>
+     <h1 id="wittetijger2">Dennenhoeve </h1>
+<h2>Grafische Vormgeving</h2>
     <div class=wittetijger>
-        <img src="Afbeeldingen/wittetijger.jpg" alt="Tijger" height="300px" width="400px">
+        <img src="assets/logokip.jpg" alt="Tijger" height="300px" width="400px">
     </div>
-    <p class=beschrijving>Neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur,<br>
-    adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore <br>
-    magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum<br> exercitationem 
-    ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi<br> 
+    <p class=beschrijving>We maakten in de les een viertal pictogrammen. het was de bedoeling<br>
+    om die pictogrammen te verwerken in een logo. Ook met het derde pictogram <br>maakte ik een logo.
     </p>
-     <h1 id="kat2">Kat</h1>
-<h2>Vormgeving</h2>
+     <h1 id="kat2">Voorblad</h1>
+<h2>Lay-out en digitale opmaak</h2>
     <div class=kat>
-        <img src="Afbeeldingen/kat.jpg" alt="Tijger" height="300px" width="200px">
+        <img src="assets/verslag.jpg" alt="Tijger" height="300px" width="200px">
     </div>
-    <p class=beschrijving>Neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur,<br>
-    adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore <br>
-    magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum<br> exercitationem 
-    ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi<br> 
+    <p class=beschrijving>De eerste opdracht van de les Lay-out en digitale opmaak <br>
+    kregen we de opdracht om een voorblad te maken. Dat voorblad <br>
+    konden we dan gebruiken voor onze onderzoeksrapporten voor <br> ander vakken.
+    <br> 
     </p>
-     <h1 id="hond2">Hond</h1>
-<h2>Vormgeving</h2>
+     <h1 id="hond2">Memo</h1>
+<h2>Grafische Vormgeving</h2>
     <div class=hond>
-        <img src="Afbeeldingen/hond.jpg" alt="Tijger" height="300px" width="300px">
+        <img src="assets/memo.jpg" alt="Tijger" height="300px" width="300px">
     </div>
-    <p class=beschrijving>Neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur,<br>
-    adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore <br>
-    magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum<br> exercitationem 
-    ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi<br> 
+    <p class=beschrijving>Dit vond ik persoonlijk de leukste opdracht van dit semester.<br>
+    'Ontwerp een doosje voor het spelletjes Memo.' De pictogrammen <br>zijn dezelfde pictogrammen als bij de logo's,<br>
+    bij mij dus boerderijdieren. 
     </p>
    
 
@@ -143,12 +137,11 @@
                 <input type="text" id="input-name" placeholder="Voornaam" required>
 				<input type="email" id="input-email" placeholder="E-mailadres" required>
 				<input type="text" id="input-subject" placeholder="Onderwerp" required>
-			
 				<textarea name="message" type="text" id="input-message" placeholder="Bericht" required></textarea> 
 			
 			
 			<button type="submit" value="submit">Verzenden</button>
-		</form>
+</form>
 <footer>
     <h4>Het blauwe wiel - Raapstraat 2, 9031 Drongen - 0498 65 52 46 <h4><br>
         <i class="fa fa-facebook-official" aria-hidden="true"></i>
