--- a/Styleguide.html
+++ b/Styleguide.html
@@ -1,108 +1,69 @@
-<!DOCTYPE html SYSTEM "about:legacy-compat"> 
-<html dir="ltr" lang="nl-be" class="no-js" prefix="og: http://ogp.me/ns#">
-  <head>
-    <!-- Character encoding -->
-	  <meta charset="UTF-8"> 
-	  <!-- Latest version of rendering engine -->
-	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <!-- Mobile Viewport -->
-	  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <!-- Most important SEO tag -->
-    <title>HTML5 | Webdesign II | GDM</title>
-    <!-- Other SEO friendly tags -->	
-    <meta name="description" content="Lees hier alles over nieuwe media, html5 en andere ontwikkelingen in webdevelopment en mobile development. De docenten NMD willen graag hun kennis delen met jou!">
-    <meta name="keywords" content="HTML5, JavaScript, jQuery, CSS3">
-    <meta name="author" content="Arteveldehogeschool - Bachelor in de grafische en digitale media | MMP">
-    <meta name="copyright" content="Copyright 2010-17 Arteveldehogeschool. All Rights Reserved.">
-    <!-- OpenGraph -->
-    <meta property="og:type" content="website">
-    <meta property="og:title" content=">HTML5 | Webdesign II | GDM">
-    <meta property="og:description" content="Lees hier alles over nieuwe media, html5 en andere ontwikkelingen in webdevelopment en mobile development. De docenten NMD willen graag hun kennis delen met jou!">
-    <meta property="og:url" content="http://www.gdm.gent/">
-    <meta property="og:site_name" content="GDM.GENT">
-    <meta property="og:image" content="assets/images/ahs.png">
-    <meta property="og:image:width" content="129">
-    <meta property="og:image:height" content="129">
-    <!-- humans.txt -->
-    <link rel="author" type="text/plain" href="/humans.txt">
-     <!-- DNS prefech for CDN -->
-    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
-    <link rel="dns-prefetch" href="//code.jquery.com">
-    <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
-    <!-- Icons -->
-    <!-- http://realfavicongenerator.net/ -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="assets/icons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="assets/icons/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="assets/icons/manifest.json">
-    <link rel="mask-icon" href="assets/icons/safari-pinned-tab.svg" color="#ee9900">
-    <link rel="shortcut icon" href="assets/icons/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="GDM">
-    <meta name="application-name" content="GDM">
-    <meta name="msapplication-config" content="assets/icons/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-    <!-- Stylesheets: Vendors -->
-    <link rel="stylesheet" media="all" href="vendor/normalize/normalize.css">
-    <!-- Stylesheets: App -->
-    <link rel="stylesheet" media="all" href="css/fonts.css">
-    <link rel="stylesheet" media="all" href="css/typography.css">
-    <link rel="stylesheet" media="all" href="css/grid.css">
-    <!-- Modernizr: feature detection -->
-    <script src="vendor/modernizr/modernizr.min.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Styleguide</title>
+    <link rel="stylesheet" type="text/css" href="Styleguide.css">
+    
 </head>
-  </head>
-  <body>
-   <!-- begin hoofdnavigatie -->
-   <div class="sf-grid__wrapper">
-     <div class="grid__container">
-       <div class="grid__row">
-         < div class="grid__column-12">
-         <nav>
-           <ul>
-             <li>
-               <a href="#">Home</a>
-             </li>
-             <li>
-               <a href="#">Portfolio</a>
-             </li>
-             <li>
-               <a href="#">Contact</a>
-             </li>
-           </ul>
-         </nav>
-         </div>
-         </div>
-         </div>
-     </div>
-
-   <!-- begin inhoud -->
-     <div class="sf-grid__wrapper">
-        <div class="grid__container">
-           <div class="grid__row">
-              <div class="grid__column-4"
-              <h2>mijn titel</h2>
-              <p> wat tekst </p>
-              </div>
-              <div class="grid__column-4"
-              </div>
-              <div class="grid__column-4"
-              </div>
-         </div>
-       </div>
-    </div>
-
-   <!-- footer -->
-     <div class="sf-grid__wrapper">
-     <div class="grid__container">
-       <div class="grid__row">
-         <div class="grid__column-12">
-           <footer>
-             <h1>Footer</h1>
-           </footer>
-           </div>
+<body>
+    <div class="container">
+    <div class="headercontainer">
+        <div class="logo">
+            <img src="app/assets/blauwewiel.jpg" alt="Logo">
         </div>
-      </div>
-    </div>
+        <div class="menu">
+            <ul>
+                <li><a href="#overons">Over ons</a></li>  
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </div>  
 
-  </body>
+<main>
+
+   <h1>Titel</h1>
+   <h2>Tussentitel</h2>
+   <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. <br>
+   Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque <br>
+   penatibus et magnis dis parturient montes, nascetur ridiculus mus.<br>
+    Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.<br>
+     Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec,<br>
+      vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, <br>
+      justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. <br>
+      Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. <br>
+      Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem <br>
+      ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut <br>
+      metus varius laoreet. Quisque rutrum. Aenean imperdiet.  <br>
+      </p>
+   <button>knop</button>
+
+   <div classe="kleuren">
+        <p id="zwart"></p>
+        <p id="grijs"></p>
+        <p id="roze"></p>
+        <p id="wit"></p>
+       </div>
+
+<div classe="foto">
+<img src="justine.jpg" alt="Justine" width="200" height="200">
+<img src="helena.jpg" alt="Helena" width="200" height="200">
+</div>
+
+<h1 id="contact">Contact</h1>
+<form action="mailto:justverl1@student.arteveldehs.be" method="post" enctype="text/plain">
+			
+				<input type="text" id="input-name" placeholder="Naam " required>
+                <input type="text" id="input-name" placeholder="Voornaam" required>
+				<input type="email" id="input-email" placeholder="E-mailadres" required>
+				<input type="text" id="input-subject" placeholder="Onderwerp" required>
+				<textarea name="message" type="text" id="input-message" placeholder="Bericht" required></textarea> 
+</form>
+<footer><p>© Made by Thomas Hayen ;)</p></footer>
+</main>
+
+</div>
+
+</body>
 </html>
