--- a/Styleguide.html
+++ b/Styleguide.html
@@ -60,7 +60,7 @@
 				<input type="text" id="input-subject" placeholder="Onderwerp" required>
 				<textarea name="message" type="text" id="input-message" placeholder="Bericht" required></textarea> 
 </form>
-<footer><p></p></footer>
+<footer><p>Dit is de footer</p></footer>
 </main>
 
 </div>
