--- a/Styleguide.html
+++ b/Styleguide.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Styleguide</title>
-    <link rel="stylesheet" type="text/css" href="Styleguide.css">
+    <link rel="stylesheet" type="text/css" href="css/styleguide.css">
     
 </head>
 <body>
     <div class="container">
     <div class="headercontainer">
         <div class="logo">
-            <img src="app/assets/blauwewiel.jpg" alt="Logo">
+            <img src="assets/blauwewiel.jpg" alt="Logo">
         </div>
         <div class="menu">
             <ul>
@@ -47,8 +47,8 @@
        </div>
 
 <div classe="foto">
-<img src="justine.jpg" alt="Justine" width="200" height="200">
-<img src="helena.jpg" alt="Helena" width="200" height="200">
+<img src="assets/justine.jpg" alt="Justine" width="200" height="200">
+<img src="assets/helena.jpg" alt="Helena" width="200" height="200">
 </div>
 
 <h1 id="contact">Contact</h1>
@@ -60,7 +60,12 @@
 				<input type="text" id="input-subject" placeholder="Onderwerp" required>
 				<textarea name="message" type="text" id="input-message" placeholder="Bericht" required></textarea> 
 </form>
-<footer><p>Dit is de footer</p></footer>
+<footer>
+    <h4>Het blauwe wiel - Raapstraat 2, 9031 Drongen - 0498 65 52 46 <h4><br>
+        <i class="fa fa-facebook-official" aria-hidden="true"></i>
+        <i class="fa fa-twitter-square" aria-hidden="true"></i>
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+</footer>
 </main>
 
 </div>
